[tool.poetry]
name = "hw11"
version = "0.1.0"
description = ""
authors = ["Rostyslav Bysko <132708200+RostislavB74@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.1"
sqlalchemy = "^2.0.23"
uvicorn = {extras = ["standard"], version = "^0.24.0.post1"}
psycopg2 = "^2.9.9"
python-multipart = "^0.0.6"
alembic = "^1.12.1"
pydantic = {extras = ["email"], version = "^2.4.2"}
jinja2 = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
