[tool.poetry]
name = "hw11"
version = "0.1.0"
description = ""
authors = ["Rostyslav Bysko <132708200+RostislavB74@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.1"
sqlalchemy = "^2.0.23"
uvicorn = {extras = ["standard"], version = "^0.34.0"}
psycopg2 = "^2.9.9"
python-multipart = "^0.0.6"
alembic = "^1.12.1"
pydantic = {extras = ["email"], version = "^2.4.2"}
jinja2 = "^3.1.2"
python-jose = "^3.3.0"
passlib = "^1.7.4"
fastapi-jwt-auth = "^0.5.0"
pillow = "^11.1.0"
pytest = "^8.3.4"
celery = "^5.4.0"
redis = "^5.2.1"
aiosqlite = "^0.20.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
